--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculator-react-typescript",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tuanpham-dev.github.io/calculator-react-typescript/",
+  "homepage": "https://Oshermaster/github.io/calcsp",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,7 +11,6 @@
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -42,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.0.1"
+    "@types/styled-components": "^5.0.1",
+    "gh-pages": "^2.2.0"
   }
 }
