--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculator-react-typescript",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Oshermaster/github.io/calcsp",
+  "homepage": "https://Oshermaster.github.io/calcsp",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
